--- a/pres/Presentation.html
+++ b/pres/Presentation.html
@@ -4,7 +4,7 @@
     <title>Frame Competition</title>
     <meta charset="utf-8" />
     <meta name="author" content="Nicolai Berk" />
-    <meta name="date" content="2022-07-10" />
+    <meta name="date" content="2022-07-12" />
     <script src="libs/header-attrs-2.14/header-attrs.js"></script>
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
   </head>
@@ -19,10 +19,56 @@
 
 
 
-&lt;div class="figure" style="text-align: center"&gt;
-&lt;img src="Presentation_files/figure-html/vectors-1.svg" alt="Schematic representation of topic vectors for party communication and news articles." width="90%" /&gt;
-&lt;p class="caption"&gt;Schematic representation of topic vectors for party communication and news articles.&lt;/p&gt;
-&lt;/div&gt;
+class: inverse, center, middle
+
+# Frame Competition
+
+#### Nicolai Berk&lt;sup&gt;*&lt;/sup&gt;
+
+Presentation prepared for the first OX|BER Graduate Workshop
+
+Berlin, 14th of July
+
+
+.left[.footnote[&lt;sup&gt;*&lt;/sup&gt; Dynamics RTG &amp; Humboldt Universität Berlin]]
+
+
+---
+
+
+## Motivation: Issue Ownership
+
+&lt;img src="Presentation_files/figure-html/MPAtt-1.svg" width="90%" style="display: block; margin: auto;" /&gt;
+
+---
+
+## Motivation II
+
+- Is parties only option to remain **mute** on other parties' issues?
+- Framing literature suggests that issue definitions affect voters'policy preferences.
+- Some experimental literature that this can affect [@Seeberg2019].
+
+--
+
+### But can framing affect voting behaviour?
+
+---
+
+## Argument
+
+1. Issue framing affects issue preferences.
+2. Dominant framing of an issue changes public opinion on that issue.
+3. Public votes based on proximity to parties' issue positions.
+
+### Issues more or less beneficial dependent on *dominant framing*!
+
+---
+
+## Measuring Consideration Attention
+
+&lt;img src="Presentation_files/figure-html/vectors-1.svg" width="90%" style="display: block; margin: auto;" /&gt;
+
+
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
